# aws-data-engineering-yahoo-finance

./: .gitignore  Dockerfile  README.md  batch.tf  eventbridge.tf  main.tf  pyproject.toml  raw_script.py  requirements.txt  sns.tf  terraform.tfvars  transform_script.py  variables.tf
kfc-order-stream/: README.md  docker-compose.yaml  kfcconsumer.py  kfcproducer.py  main.py
yahoo_finance/: .terraform.lock.hcl  Architecture.md  Dockerfile  README.md  eventbridge.tf  glue.tf  iamrole.tf  main.tf  variables.tf
yahoo_finance/src/: raw_script.py  transform_script.py
