[project]
name = "aws-boto3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens==3.0.1",
    "boto3==1.42.52",
    "botocore==1.42.52",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "comm==0.2.3",
    "confluent-kafka==2.14.0",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "executing==2.2.1",
    "faker==40.18.0",
    "idna==3.11",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jmespath==1.1.0",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "packaging==26.0",
    "parso==0.8.6",
    "platformdirs==4.9.2",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "s3transfer==0.16.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.4",
    "traitlets==5.14.3",
    "tzdata==2026.2",
    "urllib3==2.6.3",
    "wcwidth==0.6.0",
]
